// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arris normalizeDocsisStatus should work with ofdm in download 1`] = `
Object {
  "downstream": Array [
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -6.4,
      "snr": 35,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    Object {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.7,
      "snr": 38,
    },
    Object {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.8,
      "snr": 38,
    },
    Object {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.6,
      "snr": 38,
    },
    Object {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.2,
      "snr": 38,
    },
    Object {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.8,
      "snr": 38,
    },
    Object {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.6,
      "snr": 39,
    },
    Object {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.4,
      "snr": 37,
    },
    Object {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.1,
      "snr": 38,
    },
    Object {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.7,
      "snr": 39,
    },
    Object {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2,
      "snr": 39,
    },
    Object {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -8,
      "snr": 34,
    },
    Object {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    Object {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35,
    },
    Object {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.1,
      "snr": 34,
    },
    Object {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.1,
      "snr": 35,
    },
    Object {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.1,
      "snr": 35,
    },
    Object {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.6,
      "snr": 36,
    },
    Object {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35,
    },
    Object {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.9,
      "snr": 35,
    },
    Object {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35,
    },
    Object {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.9,
      "snr": 36,
    },
    Object {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.7,
      "snr": 35,
    },
    Object {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.9,
      "snr": 35,
    },
    Object {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35,
    },
    Object {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.5,
      "snr": 35,
    },
    Object {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.3,
      "snr": 35,
    },
    Object {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35,
    },
    Object {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.9,
      "snr": 34,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -6.5,
      "snr": 34,
    },
  ],
  "downstreamOfdm": Array [
    Object {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "1024QAM",
      "powerLevel": -4.1,
      "snr": 39,
    },
  ],
  "time": "2021-04-11T13:38:36.163Z",
  "upstream": Array [
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 31,
      "lockStatus": "ACTIVE",
      "modulation": "64QAM",
      "powerLevel": 52.3,
      "snr": 0,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "ACTIVE",
      "modulation": "64QAM",
      "powerLevel": 52.3,
      "snr": 0,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "ACTIVE",
      "modulation": "32QAM",
      "powerLevel": 52.3,
      "snr": 0,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 45,
      "lockStatus": "ACTIVE",
      "modulation": "64QAM",
      "powerLevel": 52.3,
      "snr": 0,
    },
  ],
  "upstreamOfdma": Array [],
}
`;

exports[`Arris normalizeDocsisStatus should work with ofdm in download and in upload 1`] = `
Object {
  "downstream": Array [
    Object {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.4,
      "snr": 38,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.7,
      "snr": 35,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5,
      "snr": 36,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.9,
      "snr": 36,
    },
    Object {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35,
    },
    Object {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.2,
      "snr": 34,
    },
    Object {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.9,
      "snr": 35,
    },
    Object {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35,
    },
    Object {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.9,
      "snr": 38,
    },
    Object {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.4,
      "snr": 39,
    },
    Object {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.6,
      "snr": 34,
    },
    Object {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.6,
      "snr": 35,
    },
    Object {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6,
      "snr": 34,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.2,
      "snr": 36,
    },
    Object {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.7,
      "snr": 35,
    },
    Object {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.3,
      "snr": 39,
    },
    Object {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.4,
      "snr": 39,
    },
    Object {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.7,
      "snr": 38,
    },
    Object {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35,
    },
    Object {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35,
    },
    Object {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.3,
      "snr": 35,
    },
    Object {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.4,
      "snr": 39,
    },
    Object {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.4,
      "snr": 35,
    },
    Object {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2,
      "snr": 39,
    },
    Object {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -1.9,
      "snr": 39,
    },
    Object {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.8,
      "snr": 34,
    },
    Object {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35,
    },
    Object {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    Object {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -1.5,
      "snr": 39,
    },
    Object {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35,
    },
    Object {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.9,
      "snr": 34,
    },
    Object {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6,
      "snr": 35,
    },
  ],
  "downstreamOfdm": Array [
    Object {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "1024QAM",
      "powerLevel": -3.8,
      "snr": 40,
    },
  ],
  "time": "2021-10-15T22:49:45.348Z",
  "upstream": Array [
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "ACTIVE",
      "modulation": "32QAM",
      "powerLevel": 51,
      "snr": 0,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "ACTIVE",
      "modulation": "32QAM",
      "powerLevel": 49,
      "snr": 0,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 31,
      "lockStatus": "ACTIVE",
      "modulation": "32QAM",
      "powerLevel": 51,
      "snr": 0,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 45,
      "lockStatus": "ACTIVE",
      "modulation": "32QAM",
      "powerLevel": 51,
      "snr": 0,
    },
  ],
  "upstreamOfdma": Array [
    Object {
      "channelId": "9",
      "channelType": "OFDMA",
      "frequencyEnd": 64.8,
      "frequencyStart": 29.8,
      "lockStatus": "SUCCESS",
      "modulation": "16_QAM",
      "powerLevel": 47,
      "snr": 0,
    },
  ],
}
`;
